[package]
name = "rust_win32error"
version = "0.8.0"
authors = ["jojonv <novakj@outlook.com>"]
license = "Apache-2.0"
keywords = ["winapi", "windows", "win32error", "ffi"]
repository = "https://github.com/jojonv/rust-win32error.git"
homepage = "https://github.com/jojonv/rust-win32error.git"
description = "Error like wrapper for GetLastError for Windows"

[dependencies]
kernel32-sys = "*"
